--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <small>Últimos posts</small>
             <ol>
                 <li>
-                    <a href="blog.html">O essencial de design responsivo</a>
+                    <a class="mais-recente" href="blog.html">O essencial de design responsivo</a>
                     <p class="inicio-post">Design responsivo tem ganho cada vez mais atenção como técnica de desenvolvimento de páginas web para dispositivos móveis. Mas como começar?</p>
                 </li>
                 <li>
